# compiler

./: .gitattributes  .gitignore  .gitmodules  .nxignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SHADOW_README.md  build.zig  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shadow.zig  shadow_stitch.zig  shadow_test.zig  solidity-parser-wrapper.cpp  solidity-parser-wrapper.h
libs/compiler/: Cargo.toml  README.md  SHADOW_CLEANUP_SUMMARY.md  compiler.wasi-browser.js  compiler.wasi.cjs  index.d.ts  index.js  package.json  pnpm-lock.yaml  project.json  tsconfig.json
libs/compiler/npm/darwin-arm64/: README.md  package.json
libs/compiler/npm/darwin-x64/: README.md  package.json
libs/compiler/npm/freebsd-x64/: README.md  package.json
libs/compiler/npm/linux-arm-gnueabihf/: README.md  package.json
libs/compiler/npm/linux-arm64-gnu/: README.md  package.json
libs/compiler/npm/linux-arm64-musl/: README.md  package.json
libs/compiler/npm/linux-x64-musl/: README.md  package.json
libs/compiler/npm/wasm32-wasi/: README.md  package.json
libs/compiler/npm/win32-arm64-msvc/: README.md  package.json
libs/compiler/scripts/: postbuild-dts.js  postbuild-generate-docs.js
libs/compiler/src/: ast.rs  compiler.rs  errors.rs  foundry-types.ts  instrument.rs  lib.rs  shadow.rs
libs/compiler/test/: SHADOW_TEST_SUMMARY.md  ast.spec.ts  compiler.foundry.spec.ts  compiler.hardhat.spec.ts  compiler.spec.ts  compiler.test.ts  contract.spec.ts  instrument.spec.ts  integrations.spec.ts  logger.spec.ts  shadow.spec.ts  shadow.test.ts  typecheck.spec.ts
(+108 files in other folders)
