
[package]
name = 'compiler'
version = '0.1.0'
edition = '2021'

[dependencies]
foundry-compilers = { version = "0.19.5", features = ["svm-solc"] }
hex = "0.4.3"
napi = { version = '2.10.2', default-features = false, features = [
	'napi4',
] }
napi-derive = '2.9.3'
semver = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lib]
crate-type = [
	'cdylib',
]

[build-dependencies]
napi-build = '2.0.1'
